[package]
name = "cw20-atomic-swap"
version = "0.12.1"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>"]
edition = "2018"
description = "Implementation of Atomic Swaps"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-tokens"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.2"
cw2 = "0.13.2"
cw20 = "0.13.2"
cosmwasm-std = "1.0.0-beta8"
cw-storage-plus = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
hex = "0.3.2"
sha2 = "0.8.2"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta8"
