[package]
name = "cw20-escrow"
version = "0.13.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implementation of an escrow that accepts CosmWasm-20 tokens as well as native tokens"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-tokens"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.4"
cw2 = "0.13.4"
cw20 = "0.13.4"
cosmwasm-std = "1.1.5"
cw-storage-plus = "0.13.4"
cosmwasm-schema = "1.1.5"
thiserror = "1.0.31"

[dev-dependencies]
cw-multi-test = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"] }
