[package]
name = "cw20-staking"
version = "0.14.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implement simple staking derivatives as a cw20 token"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-tokens"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cw-controllers = "0.16.0"
cw20-base = { version = "0.16.0", features = ["library"] }
cosmwasm-std = { version = "1.1.5", features = ["staking"] }
cw-storage-plus = "0.16.0"
thiserror = "1.0.31"
cosmwasm-schema = "1.1.5"
[dev-dependencies]

